syntax = "proto3";

// Language Dependent Statement Start
option java_package = "ericsson.core.nrf.dbproxy.grpc.nfmessage.subscription";
option java_outer_classname = "SubscriptionGetResponseProto";
option go_package = "com/dbproxy/nfmessage/subscription";
package grpc;
// Language Dependent Statement End

message SubscriptionGetResponse {
    uint32 code                                     = 1;
    oneof data {
        SubscriptionIDList subscription_id_list     = 2;
        SubscriptionDataList subscription_data_list = 3;
    }
}

message SubscriptionIDList {
    repeated string subscription_id = 1;
}

message SubscriptionDataList {
    repeated bytes subscription_data = 1;
}

